--- a/Helios/Ramdisk/ramdisk/init.carrier.rc
+++ b/Helios/Ramdisk/ramdisk/init.carrier.rc
@@ -1,34 +1,13 @@
 
+on init
+#omr
+    mkdir /omr 0771 system system
+
 on boot
 
- # tdmb
-    chown system system /dev/tdmb
-    chmod 0660 /dev/tdmb
-
 on fs
-
-service dmb /system/bin/dmbserver
-    class main
-    user media
-    group system radio inet misc audio camera graphics net_bt net_bt_admin sdcard_rw sdcard_r shell media_rw
-
-on post-fs-data
-
-# SKT DRM
-    mkdir /data/.sktdrm 0775
-    chown system system /data/.sktdrm
-    chmod 0775 /data/.sktdrm
-
-on post-fs-data
-
-# MOBILE OFFICE Permanent memory access
-    mkdir /efs/security 0771 root root
-    chown radio system /efs/security
-    chmod 0771 /efs/security
-
-#SLocation
-service cellgeofenced /system/bin/cellgeofenced
-    class main
-    socket cellgeofence seqpacket 0660 gps system
-    user gps
-    group system inet
+#omr
+    wait /dev/block/platform/13500000.dwmmc0/by-name/OMR
+    mount ext4 /dev/block/platform/13500000.dwmmc0/by-name/OMR /omr nosuid nodev noatime noauto_da_alloc,discard,journal_checksum,data=ordered,errors=panic
+    chown system system /omr
+    chmod 0771 /omr
