--- a/Helios/Ramdisk/ramdisk/init.usb.configfs.rc
+++ b/Helios/Ramdisk/ramdisk/init.usb.configfs.rc
@@ -1,12 +1,11 @@
 # Used to disable USB when switching states
 on property:sys.usb.config=none && property:sys.usb.configfs=1
-    write /config/usb_gadget/g1/UDC "none"
     stop adbd
     setprop sys.usb.ffs.ready 0
     write /sys/class/android_usb/android0/enable 0
-    write /config/usb_gadget/g1/bDeviceClass 0
-    write /config/usb_gadget/g1/bDeviceSubClass 0
-    write /config/usb_gadget/g1/bDeviceProtocol 0
+    write /sys/kernel/config/usb_gadget/g1/bDeviceClass 0
+    write /sys/kernel/config/usb_gadget/g1/bDeviceSubClass 0
+    write /sys/kernel/config/usb_gadget/g1/bDeviceProtocol 0
     setprop sys.usb.state ${sys.usb.config}
 
 # adb only USB configuration
@@ -19,7 +18,7 @@ on property:sys.usb.ffs.ready=1 && property:sys.usb.config=adb && property:sys.u
     write /sys/kernel/config/usb_gadget/g1/idProduct 0x685d
     write /sys/kernel/config/usb_gadget/g1/idVendor 0x04e8
     write /sys/class/android_usb/android0/functions ${sys.usb.config}
-    write /sys/kernel/config/usb_gadget/g1/UDC "10c00000.dwc3"
+    write /sys/kernel/config/usb_gadget/g1/UDC ${sys.usb.controller}
     write /sys/class/android_usb/android0/enable 1
     setprop sys.usb.state ${sys.usb.config}
 
@@ -29,7 +28,7 @@ on property:sys.usb.config=accessory && property:sys.usb.configfs=1
     write /sys/kernel/config/usb_gadget/g1/idProduct 0x2d00
     write /sys/kernel/config/usb_gadget/g1/idVendor 0x18d1
     write /sys/class/android_usb/android0/functions ${sys.usb.config}
-    write /sys/kernel/config/usb_gadget/g1/UDC "10c00000.dwc3"
+    write /sys/kernel/config/usb_gadget/g1/UDC ${sys.usb.controller}
     write /sys/class/android_usb/android0/enable 1
     setprop sys.usb.state ${sys.usb.config}
 
@@ -41,7 +40,7 @@ on property:sys.usb.ffs.ready=1 && property:sys.usb.config=accessory,adb && prop
     write /sys/kernel/config/usb_gadget/g1/idProduct 0x2d01
     write /sys/kernel/config/usb_gadget/g1/idVendor 0x18d1
     write /sys/class/android_usb/android0/functions ${sys.usb.config}
-    write /sys/kernel/config/usb_gadget/g1/UDC "10c00000.dwc3"
+    write /sys/kernel/config/usb_gadget/g1/UDC ${sys.usb.controller}
     write /sys/class/android_usb/android0/enable 1
     setprop sys.usb.state ${sys.usb.config}
 
@@ -51,7 +50,7 @@ on property:sys.usb.config=audio_source && property:sys.usb.configfs=1
     write /sys/kernel/config/usb_gadget/g1/idProduct 0x2d02
     write /sys/kernel/config/usb_gadget/g1/idVendor 0x18d1
     write /sys/class/android_usb/android0/functions ${sys.usb.config}
-    write /sys/kernel/config/usb_gadget/g1/UDC "10c00000.dwc3"
+    write /sys/kernel/config/usb_gadget/g1/UDC ${sys.usb.controller}
     write /sys/class/android_usb/android0/enable 1
     setprop sys.usb.state ${sys.usb.config}
 
@@ -63,7 +62,7 @@ on property:sys.usb.ffs.ready=1 && property:sys.usb.config=audio_source,adb && p
     write /sys/kernel/config/usb_gadget/g1/idProduct 0x2d03
     write /sys/kernel/config/usb_gadget/g1/idVendor 0x18d1
     write /sys/class/android_usb/android0/functions ${sys.usb.config}
-    write /sys/kernel/config/usb_gadget/g1/UDC "10c00000.dwc3"
+    write /sys/kernel/config/usb_gadget/g1/UDC ${sys.usb.controller}
     write /sys/class/android_usb/android0/enable 1
     setprop sys.usb.state ${sys.usb.config}
 
@@ -73,7 +72,7 @@ on property:sys.usb.config=accessory,audio_source && property:sys.usb.configfs=1
     write /sys/kernel/config/usb_gadget/g1/idProduct 0x2d04
     write /sys/kernel/config/usb_gadget/g1/idVendor 0x18d1
     write /sys/class/android_usb/android0/functions ${sys.usb.config}
-    write /sys/kernel/config/usb_gadget/g1/UDC "10c00000.dwc3"
+    write /sys/kernel/config/usb_gadget/g1/UDC ${sys.usb.controller}
     write /sys/class/android_usb/android0/enable 1
     setprop sys.usb.state ${sys.usb.config}
 
@@ -85,7 +84,7 @@ on property:sys.usb.ffs.ready=1 && property:sys.usb.config=accessory,audio_sourc
     write /sys/kernel/config/usb_gadget/g1/idProduct 0x2d05
     write /sys/kernel/config/usb_gadget/g1/idVendor 0x18d1
     write /sys/class/android_usb/android0/functions ${sys.usb.config}
-    write /sys/kernel/config/usb_gadget/g1/UDC "10c00000.dwc3"
+    write /sys/kernel/config/usb_gadget/g1/UDC ${sys.usb.controller}
     write /sys/class/android_usb/android0/enable 1
     setprop sys.usb.state ${sys.usb.config}
 
@@ -94,7 +93,7 @@ on property:sys.usb.config=midi && property:sys.usb.configfs=1
     write /sys/kernel/config/usb_gadget/g1/idProduct 0x686C
     write /sys/kernel/config/usb_gadget/g1/idVendor 0x04e8
     write /sys/class/android_usb/android0/functions ${sys.usb.config}
-    write /sys/kernel/config/usb_gadget/g1/UDC "10c00000.dwc3"
+    write /sys/kernel/config/usb_gadget/g1/UDC ${sys.usb.controller}
     write /sys/class/android_usb/android0/enable 1
     setprop sys.usb.state ${sys.usb.config}
 
@@ -105,7 +104,7 @@ on property:sys.usb.ffs.ready=1 && property:sys.usb.config=midi,adb && property:
     write /sys/kernel/config/usb_gadget/g1/idProduct 0x686C
     write /sys/kernel/config/usb_gadget/g1/idVendor 0x04e8
     write /sys/class/android_usb/android0/functions ${sys.usb.config}
-    write /sys/kernel/config/usb_gadget/g1/UDC "10c00000.dwc3"
+    write /sys/kernel/config/usb_gadget/g1/UDC ${sys.usb.controller}
     write /sys/class/android_usb/android0/enable 1
     setprop sys.usb.state ${sys.usb.config}
 
@@ -115,7 +114,7 @@ on property:sys.usb.ffs.ready=1 && property:sys.usb.config=midi,adb && property:
     write /sys/kernel/config/usb_gadget/g1/idVendor 0x04e8
     write /sys/class/android_usb/android0/functions ${sys.usb.config}
     write /sys/kernel/config/usb_gadget/g1/bDeviceClass 2
-    write /sys/kernel/config/usb_gadget/g1/UDC "10c00000.dwc3"
+    write /sys/kernel/config/usb_gadget/g1/UDC ${sys.usb.controller}
     write /sys/class/android_usb/android0/enable 1
     setprop sys.usb.state ${sys.usb.config}
 
@@ -127,6 +126,6 @@ on property:sys.usb.ffs.ready=1 && property:sys.usb.config=ncm,adb && property:s
     write /sys/kernel/config/usb_gadget/g1/idVendor 0x04e8
     write /sys/class/android_usb/android0/functions ${sys.usb.config}
     write /sys/kernel/config/usb_gadget/g1/bDeviceClass 2
-    write /sys/kernel/config/usb_gadget/g1/UDC "10c00000.dwc3"
+    write /sys/kernel/config/usb_gadget/g1/UDC ${sys.usb.controller}
     write /sys/class/android_usb/android0/enable 1
     setprop sys.usb.state ${sys.usb.config}
