--- a/arch/arm64/configs/exynos7420-noblelte_defconfig
+++ b/arch/arm64/configs/exynos7420-noblelte_defconfig
@@ -1059,14 +1059,13 @@ CONFIG_BT_HIDP=y
 # Bluetooth device drivers
 #
 # CONFIG_BT_HCIBTUSB is not set
+# CONFIG_BT_HCIBTSDIO is not set
 # CONFIG_BT_HCIUART is not set
-# CONFIG_BT_UART_IN_AUDIO is not set
 # CONFIG_BT_HCIBCM203X is not set
 # CONFIG_BT_HCIBPA10X is not set
 # CONFIG_BT_HCIBFUSB is not set
 # CONFIG_BT_HCIVHCI is not set
 # CONFIG_BT_MRVL is not set
-# CONFIG_BT_BCM43455 is not set
 # CONFIG_BT_BCM4358 is not set
 CONFIG_BT_BCM4359=y
 # CONFIG_AF_RXRPC is not set
@@ -1084,7 +1083,6 @@ CONFIG_CFG80211_DEFAULT_PS=y
 # CONFIG_CFG80211_INTERNAL_REGDB is not set
 CONFIG_CFG80211_WEXT=y
 # CONFIG_LIB80211 is not set
-CONFIG_CFG80211_ALLOW_RECONNECT=y
 CONFIG_CFG80211_REG_NOT_UPDATED=y
 # CONFIG_MAC80211 is not set
 # CONFIG_WIMAX is not set
@@ -1097,6 +1095,7 @@ CONFIG_RFKILL_PM=y
 # CONFIG_CAIF is not set
 # CONFIG_CEPH_LIB is not set
 CONFIG_NFC=y
+# CONFIG_NFC_DIGITAL is not set
 # CONFIG_NFC_NCI is not set
 # CONFIG_NFC_HCI is not set
 
@@ -1680,6 +1679,8 @@ CONFIG_USB_NET_CDCETHER=y
 CONFIG_USB_NET_CDC_NCM=y
 # CONFIG_USB_NET_CDC_MBIM is not set
 # CONFIG_USB_NET_DM9601 is not set
+# CONFIG_USB_NET_SR9700 is not set
+# CONFIG_USB_NET_SR9800 is not set
 CONFIG_USB_NET_SMSC75XX=y
 CONFIG_USB_NET_SMSC95XX=y
 # CONFIG_USB_NET_GL620A is not set
@@ -1709,22 +1710,26 @@ CONFIG_WLAN=y
 # CONFIG_PRISM54 is not set
 # CONFIG_USB_ZD1201 is not set
 # CONFIG_USB_NET_RNDIS_WLAN is not set
-CONFIG_WIFI_CONTROL_FUNC=y
 # CONFIG_ATH_CARDS is not set
 CONFIG_BROADCOM_WIFI=y
 # CONFIG_BCM4330 is not set
 # CONFIG_BCM4343 is not set
+# CONFIG_BCM43436 is not set
 # CONFIG_BCM4334 is not set
 # CONFIG_BCM4335 is not set
 # CONFIG_BCM4339 is not set
 # CONFIG_BCM4354 is not set
+# CONFIG_BCM43012 is not set
 # CONFIG_BCM4358 is not set
 CONFIG_BCM4359=y
+# CONFIG_BCM4361 is not set
 # CONFIG_BCM43241 is not set
-# CONFIG_BCM4334W is not set
+# CONFIG_BCM43456 is not set
 # CONFIG_BCM43455 is not set
-CONFIG_BCMDHD_FW_PATH="/vendor/etc/wifi/bcmdhd_sta.bin"
-CONFIG_BCMDHD_NVRAM_PATH="/vendor/etc/wifi/nvram_net.txt"
+# CONFIG_BCM4334W is not set
+# CONFIG_BCM43454 is not set
+CONFIG_BCMDHD_FW_PATH="/etc/wifi/bcmdhd_sta.bin"
+CONFIG_BCMDHD_NVRAM_PATH="/etc/wifi/nvram_net.txt"
 CONFIG_BROADCOM_WIFI_RESERVED_MEM=y
 # CONFIG_WIFI_BROADCOM_COB is not set
 CONFIG_WLAN_REGION_CODE=100
@@ -1735,11 +1740,14 @@ CONFIG_BCMDHD_PCIE=y
 CONFIG_BCMDHD_PREALLOC_PKTIDMAP=y
 CONFIG_BCMDHD_PREALLOC_MEMDUMP=y
 # CONFIG_WLAN_HERO is not set
-# CONFIG_WLAN_HERO2 is not set
-# CONFIG_WLAN_GRACE is not set
+CONFIG_WLAN_HERO2=y
+CONFIG_BCMDHD_OOB_HOST_WAKE=y
 CONFIG_SPLIT_ARGOS_SET=y
+# CONFIG_WLAN_GRACE is not set
+# CONFIG_WLAN_GREAT is not set
+# CONFIG_BCM_DETECT_CONSECUTIVE_HANG is not set
+# CONFIG_WLAN_5GDISABLE is not set
 # CONFIG_BCM4358_A3 is not set
-# CONFIG_BCM43454 is not set
 # CONFIG_BRCMFMAC is not set
 # CONFIG_HOSTAP is not set
 # CONFIG_IPW2100 is not set
@@ -1748,7 +1756,6 @@ CONFIG_SPLIT_ARGOS_SET=y
 # CONFIG_HERMES is not set
 # CONFIG_WL_TI is not set
 # CONFIG_MWIFIEX is not set
-# CONFIG_LGUIWLAN is not set
 
 #
 # Enable WiMAX (Networking options) to see the WiMAX drivers
