--- a/Helios/Ramdisk/ramdisk/init.samsungexynos7420.rc
+++ b/Helios/Ramdisk/ramdisk/init.samsungexynos7420.rc
@@ -242,7 +242,7 @@ on post-fs-data
     chown audioserver system /data/firmware
 
     # Permissions Camera
-    mkdir /data/vendor/camera 0770 cameraserver system
+    mkdir /data/camera 0770 cameraserver system
     chown cameraserver cameraserver /sys/kernel/mm/vmscan/mem_boost_mode
     chown system radio /sys/class/camera/rear/rear_camfw
     chown system radio /sys/class/camera/rear/rear_camfw_full
