--- a/arch/arm64/configs/noblelte_defconfig
+++ b/arch/arm64/configs/noblelte_defconfig
@@ -2866,6 +2866,7 @@ CONFIG_EXYNOS_DECON_LCD=y
 CONFIG_EXYNOS_DECON_MDNIE_LITE=y
 CONFIG_EXYNOS_DECON_LCD_SYSFS=y
 # CONFIG_EXYNOS_DECON_LCD_MCD is not set
+# CONFIG_LCD_RES is not set
 CONFIG_LCD_HMT=y
 # CONFIG_LCD_ALPM is not set
 CONFIG_LCD_BURNIN_CORRECTION=y
@@ -2877,6 +2878,9 @@ CONFIG_LCD_DOZE_MODE=y
 CONFIG_PANEL_S6E3HA3_DYNAMIC=y
 # CONFIG_PANEL_S6E3HF3_DYNAMIC is not set
 # CONFIG_PANEL_S6E3FA3_A8XE is not set
+# CONFIG_PANEL_DDI_SPI is not set
+CONFIG_VDDR_1p5V_ALPM=y
+# CONFIG_LCD_WEAKNESS_CCB is not set
 # CONFIG_EXYNOS_DECON_DUAL_DISPLAY is not set
 # CONFIG_PANEL_S6E3FA3 is not set
 # CONFIG_EXYNOS_DECON_DUAL_DSI is not set
